# Grvlytics

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
docs/: performance-index.md
scripts/: analyze_period.py  analyze_recent_rides.py  analyze_ride_effort.py  analyze_ride_segments.py  analyze_single_ride.py  strava_auth.py
src/grvlytics/: cache.py  cli.py  perf.py  period.py  strava.py  terrain.py
